# git-dump-diff

./: .gitignore  .secrets.baseline  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  git_dump_diff.py  pyproject.toml
docs/: conf.py.distrib  package.rst  source_tree.rst  source_tree_full.rst
tests/: test_git_dump_diff.py
